<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="@color/black"
        android:layout_below="@+id/login_title"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColorHint="@color/black"
        android:layout_below="@+id/email"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_text_login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_text_register"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"/>

</RelativeLayout>