<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/tvApplicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/namaaplikasi"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvApplicationName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/deskripsi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvVersionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDesc"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/versiontext"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVersionText"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/version"
        android:textSize="18sp" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVersion"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="Log Out"
        android:layout_centerHorizontal="true"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_navigation"
        android:background="?android:attr/windowBackground"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>